--- a/LinuxGlobalHotkeys.csproj
+++ b/LinuxGlobalHotkeys.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="samples\LinuxGlobalHotkeysDemo\LinuxGlobalHotkeysDemo.csproj" />
     <Content Include="src\LinuxGlobalHotkeys\LinuxGlobalHotkeys.csproj" />
   </ItemGroup>
 
